--- a/cdx_core/app/views/addresses/_form.haml
+++ b/cdx_core/app/views/addresses/_form.haml
@@ -1,5 +1,5 @@
-.row
-  .col.pe-2
+.addressrow
+  .addresslabels
     %div.tooltip
       = address_form.label :address, prefix << I18n.t('addresses.form.address')
       %div.tooltiptext_r
@@ -20,12 +20,9 @@
       = address_form.label :zip_code, I18n.t('addresses.form.zip_code')
       %div.tooltiptext_r
         = I18n.t('addresses.form.zip_code_tooltip')
-  .col
+  .addressfields
     = address_form.text_field :address, :class => 'input-large'
     = address_form.text_field :city, :class => 'input-large'
     = address_form.text_field :state, :class => 'input-large'
     = render partial: 'addresses/country_select_form', locals: { address_form: address_form }
     = address_form.text_field :zip_code, :class => 'input-large zipcode'
-  .col
-  .col
-  .col
