--- a/cdx_api_core/app/views/layouts/api.haml
+++ b/cdx_api_core/app/views/layouts/api.haml
@@ -5,7 +5,7 @@
     = Gon::Base.render_data({})
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "es5-shim" if Rails.env.test?
-    = javascript_include_tag "application"
+    = javascript_include_tag "cdx_api_core/application"
     = csrf_meta_tags
   %body.devise{class: @body_class}
     .wrapper
