--- a/cdx_core/app/views/patients/_form.html.haml
+++ b/cdx_core/app/views/patients/_form.html.haml
@@ -4,159 +4,163 @@
 
   = validation_errors @patient
 
-  .row.header
-    .col.pe-2
-      %div.tooltip
-        = f.label :institution
-        %div.tooltiptext_r
-          = I18n.t('patients.form.institution_tooltip')
-    .col
-      .value= f.object.institution
+  .whitebox
+  
+    .fieldrow#pname
+      = react_component 'PatientInputName', fieldValue: @patient.name, patientsSearchUrl: patient_search_index_path
+    .fieldrow#pnickname
+      .fieldlabel
+        %div.tooltip
+          = f.label :nickname
+          %div.tooltiptext_r
+            = I18n.t('patients.form.nickname_tooltip')
+      .fieldvalue
+        = f.text_field :nickname, :class => 'input-large'
+        
+    
+    .fieldrow#pgender
+      .fieldlabel
+        %div.tooltip
+          = f.label :social_security_code
+          %div.tooltiptext_r
+            = I18n.t('patients.form.social_security_code_tooltip')
+      .fieldvalue
+        = f.text_field :social_security_code, :class => 'input-large'
+    
+        
+    
+    .fieldrow#pdob
+      .fieldlabel
+        %div.tooltip
+          = f.label :birth_date_on
+          %div.tooltiptext_r
+            = I18n.t('patients.form.birthdate_tooltip')
+      .fieldvalue
+        = f.date_select :birth_date_on, order: [:day, :month, :year], prompt: { day: I18n.t('patients.form.select_day'), month: I18n.t('patients.form.select_month'), year: I18n.t('patients.form.select_year') }, start_year: Date.today.year, end_year: Date.today.year - 100
+    .fieldrow#pmis
+      .fieldlabel
+        %div.tooltip
+          = f.label :medical_insurance_num
+          %div.tooltiptext_r
+            = I18n.t('patients.form.medical_insurance_num_tooltip')
+      .fieldvalue
+        = f.text_field :medical_insurance_num, :class => 'input-large'
+    
+    
+    
+    .fieldrow#pestimateage
+      .fieldlabel
+        %div.tooltip
+          = f.label I18n.t('patients.form.estimate_age')
+          %div.tooltiptext_r
+            = I18n.t('patients.form.estimate_age_tooltip')
+      .fieldvalue
+        = f.text_field 'age', :class=>'input-large'
+        %script
+          $('#patient_age').on('blur', function(){
+          var currentyear = new Date().getFullYear();
+          var estimatedyear = currentyear - $(this).val();
+          $('#patient_birth_date_on_1i').val(estimatedyear);
+          });
+    .fieldrow#pextid
+      .fieldlabel
+        %div.tooltip
+          = f.label :external_id
+          %div.tooltiptext_r
+            = I18n.t('patients.form.external_id_tooltip')
+      .fieldvalue
+        = f.text_field :external_id, :class => 'input-large'
+    
 
-  = react_component 'PatientInputName', fieldValue: @patient.name, patientsSearchUrl: patient_search_index_path
+    .fieldrow#pemail
+      .fieldlabel
+        %div.tooltip
+          = f.label :email
+          %div.tooltiptext_r
+            = I18n.t('patients.form.email_tooltip')
+      .fieldvalue
+        = f.text_field :email, :class => 'input-large'
+    .fieldrow#pexsys
+      .fieldlabel
+        %div.tooltip
+          = f.label :external_patient_system
+          %div.tooltiptext_r
+            = I18n.t('patients.form.external_patient_system_tooltip')
+      .fieldvalue
+        = f.text_field :external_patient_system, :class => 'input-large'
+    
 
-  .row.nickname
-    .col.pe-2
-      %div.tooltip
-        = f.label :nickname
-        %div.tooltiptext_r
-          = I18n.t('patients.form.nickname_tooltip')
-    .col
-      = f.text_field :nickname, :class => 'input-large'
+    .fieldrow#pphone
+      .fieldlabel
+        %div.tooltip
+          = f.label :phone
+          %div.tooltiptext_r
+            = I18n.t('patients.form.phone_tooltip')
+      .fieldvalue
+        = f.text_field :phone, :class => 'input-large'
+    .fieldrow#p
+      .fieldlabel
+        %div.tooltip
+          = f.label :entity_id
+          %div.tooltiptext_r
+            = I18n.t('patients.form.entity_id_tooltip')
+      .fieldvalue
+        .textblock
+          = @patient.display_patient_id
 
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :social_security_code
-        %div.tooltiptext_r
-          = I18n.t('patients.form.social_security_code_tooltip')
-    .col
-      = f.text_field :social_security_code, :class => 'input-large'
+    %br{:clear => "both"}/
+  
+  .whitebox
+    .purpleheader
+      %h3 ADDRESS DETAILS
+    
 
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :medical_insurance_num
-        %div.tooltiptext_r
-          = I18n.t('patients.form.medical_insurance_num_tooltip')
-    .col
-      = f.text_field :medical_insurance_num, :class => 'input-large'
-
-  - unless @patient.id.nil?
-    .row
+    .row.hideme
       .col.pe-2
         %div.tooltip
           = f.label :entity_id
           %div.tooltiptext_r
             = I18n.t('patients.form.entity_id_tooltip')
       .col
-        = @patient.display_patient_id
+        = f.text_field :entity_id, :class => 'input-large', readonly: !@patient.new_record?
 
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :external_id
-        %div.tooltiptext_r
-          = I18n.t('patients.form.external_id_tooltip')
-    .col
-      = f.text_field :external_id, :class => 'input-large'
 
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :external_patient_system
-        %div.tooltiptext_r
-          = I18n.t('patients.form.external_patient_system_tooltip')
-    .col
-      = f.text_field :external_patient_system, :class => 'input-large'
+        
+    - count = 0
+    = f.fields_for :addresses do |addresses_form|
+      - count = count + 1
+      - prefix = 'addresses.form.address' << count.to_s << '_prefix'
+      %div{:class => "add#{count}"}
+        = render partial: 'addresses/form', locals: { address_form: addresses_form, prefix: I18n.t(prefix) }
 
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :gender
-        %div.tooltiptext_r
-          = I18n.t('patients.form.gender_tooltip')
-    .col
-      = f.collection_select :gender, Patient.gender_options, :first, :last
-
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :birth_date_on
-        %div.tooltiptext_r
-          = I18n.t('patients.form.birthdate_tooltip')
-    .col
-      = f.date_select :birth_date_on, order: [:day, :month, :year], prompt: { day: I18n.t('patients.form.select_day'), month: I18n.t('patients.form.select_month'), year: I18n.t('patients.form.select_year') }, start_year: Date.today.year, end_year: Date.today.year - 100
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label I18n.t('patients.form.estimate_age')
-        %div.tooltiptext_r
-          = I18n.t('patients.form.estimate_age_tooltip')
-
-    .col
-      = f.text_field 'age', :class=>'input-large'
+    - if count > 1
       :javascript
-        $('#patient_age').on('blur', function(){
-          var estage = $(this).val();
-          if('' != estage)
-          {
-            var cyear = new Date().getFullYear();
-            var tyear = cyear - estage;
-            $('#patient_birth_date_on_1i').val(tyear);
-          }
+        $(document).ready( function() {
+          $('#copy_addr').on('click', function(event){
+            event.preventDefault();
+            // copy address fields
+            $('#patient_addresses_attributes_1_address').val(  $('#patient_addresses_attributes_0_address').val() );
+            $('#patient_addresses_attributes_1_city').val(     $('#patient_addresses_attributes_0_city').val() );
+            $('#patient_addresses_attributes_1_state').val(    $('#patient_addresses_attributes_0_state').val() );
+            $('#patient_addresses_attributes_1_country').val(  $('#patient_addresses_attributes_0_country option:selected').val() ).change();
+            $('#patient_addresses_attributes_1_zip_code').val( $('#patient_addresses_attributes_0_zip_code').val() );
+          });
         });
 
-  - count = 0
-  = f.fields_for :addresses do |addresses_form|
-    - count = count + 1
-    - prefix = 'addresses.form.address' << count.to_s << '_prefix'
-    %div{:class => "add#{count}"}
-      = render partial: 'addresses/form', locals: { address_form: addresses_form, prefix: I18n.t(prefix) }
-
-  - if count > 1
-    :javascript
-      $(document).ready( function() {
-        $('#copy_addr').on('click', function(event){
-          event.preventDefault();
-          // copy address fields
-          $('#patient_addresses_attributes_1_address').val(  $('#patient_addresses_attributes_0_address').val() );
-          $('#patient_addresses_attributes_1_city').val(     $('#patient_addresses_attributes_0_city').val() );
-          $('#patient_addresses_attributes_1_state').val(    $('#patient_addresses_attributes_0_state').val() );
-          $('#patient_addresses_attributes_1_country').val(  $('#patient_addresses_attributes_0_country option:selected').val() ).change();
-          $('#patient_addresses_attributes_1_zip_code').val( $('#patient_addresses_attributes_0_zip_code').val() );
-        });
-      });
-
-    .row
-      .col.pe-2
-      .col
+      %br{:clear => "both"}/
+      .row.button
         %button.input-large#copy_addr 
           = I18n.t('patients.form.copy_addr_button')
 
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :email
-        %div.tooltiptext_r
-          = I18n.t('patients.form.email_tooltip')
-    .col
-      = f.text_field :email, :class => 'input-large'
+            
+    %br{:clear => "both"}/
 
-  .row
-    .col.pe-2
-      %div.tooltip
-        = f.label :phone
-        %div.tooltiptext_r
-          = I18n.t('patients.form.phone_tooltip')
-    .col
-      = f.text_field :phone, :class => 'input-large'
 
-  .row.button-actions
-    .col
-      = f.submit I18n.t('views.save'), class: 'btn-primary save'
-      - cancel_path = @patient.persisted? ? patient_path(@patient) : patients_path
-      = link_to I18n.t('views.cancel'), cancel_path, class: 'btn-link'
+    .row.button-actions
+      .col
+        = f.submit I18n.t('views.save'), class: 'btn-primary save'
+        - cancel_path = @patient.persisted? ? patient_path(@patient) : patients_path
+        = link_to I18n.t('views.cancel'), cancel_path, class: 'btn-link'
 
-      - if @can_delete
-        = confirm_deletion_button @patient, 'patient'
+        - if @can_delete
+          = confirm_deletion_button @patient, 'patient'
