--- a/cdx_core/app/views/institutions/edit.haml
+++ b/cdx_core/app/views/institutions/edit.haml
@@ -1,15 +1,22 @@
-- if @can_create
-  = link_to "+", new_institution_path, class: 'btn-add side-link ontop fix', title: I18n.t('institutions.edit.btn_create')
-- else
-  - content_for(:subheader) do
-    .row.center.edit
-      .col.pe-10
-        .row
-          .col
-            %h2
-              - unless @institutions.one?
-                = link_to institutions_path, class: 'side-link', title: I18n.t('views.back') do
-                  = image_tag "arrow-left.png"
-              = @institution.name
+.row.center.edit.collapse
+  .col.pe-10
+    %h2
+      - unless @institutions.one?
+        = link_to institutions_path, class: 'side-link', title: I18n.t('views.back') do
+          = image_tag "arrow-left-white.png"
+      = @institution.name
+     
 
-= render 'form'
+.testflow.instituteform
+
+  .row.labelHeader
+    .col-6
+      %h3
+        Institution Details
+    .col-6
+      %ul
+  .panel.patient-details.no-scroll
+    .row
+      .col-12
+
+        = render 'form'
