--- a/cdx_core/app/views/institutions/index.haml
+++ b/cdx_core/app/views/institutions/index.haml
@@ -1,6 +1,10 @@
-.row
-  .col
-    - if @can_create
-      = link_to "+", new_institution_path, class: 'btn-add side-link ontop fix', title: I18n.t('institutions.index.btn_add')
+.filterbar.filterbartest
+  .heading
+    .title
+      = I18n.t('institutions.index.institution')
+    .topfilteropt
+      - if @can_create
+        = link_to "+", new_institution_path, class: 'btn-add side-link ontop fix', title: I18n.t('institutions.index.btn_add')
 
-    = render partial: 'list'
+.insitutionlist
+  = render partial: 'list'
