--- a/cdx_core/app/views/patients/_form.html.haml
+++ b/cdx_core/app/views/patients/_form.html.haml
@@ -62,14 +62,15 @@
           var estimatedyear = currentyear - $(this).val();
           $('#patient_birth_date_on_1i').val(estimatedyear);
           });
-    .fieldrow#pextid
-      .fieldlabel
-        %div.tooltip
-          = f.label :external_id
-          %div.tooltiptext_r
-            = I18n.t('patients.form.external_id_tooltip')
-      .fieldvalue
-        = f.text_field :external_id, :class => 'input-large'
+    - if ExternalSystem.any?
+      .fieldrow#pextid
+        .fieldlabel
+          %div.tooltip
+            = f.label :external_id
+            %div.tooltiptext_r
+              = I18n.t('patients.form.external_id_tooltip')
+        .fieldvalue
+          = f.text_field :external_id, :class => 'input-large'
     
 
     .fieldrow#pemail
@@ -80,15 +81,15 @@
             = I18n.t('patients.form.email_tooltip')
       .fieldvalue
         = f.text_field :email, :class => 'input-large'
-    .fieldrow#pexsys
-      .fieldlabel
-        %div.tooltip
-          = f.label :external_patient_system
-          %div.tooltiptext_r
-            = I18n.t('patients.form.external_patient_system_tooltip')
-      .fieldvalue
-        = f.text_field :external_patient_system, :class => 'input-large'
-    
+    - if ExternalSystem.any?
+      .fieldrow#pexsys
+        .fieldlabel
+          %div.tooltip
+            = f.label :external_patient_system
+            %div.tooltiptext_r
+              = I18n.t('patients.form.external_patient_system_tooltip')
+        .fieldvalue
+          = f.collection_select :external_system, ExternalSystem.all, :id, :name, prompt: I18n.t('forms.please_select')
 
     .fieldrow#pphone
       .fieldlabel
