--- a/cdx_vietnam/app/views/patients/_form.html.haml
+++ b/cdx_vietnam/app/views/patients/_form.html.haml
@@ -56,9 +56,7 @@
             = I18n.t('patients.form.medical_insurance_num_tooltip')
       .fieldvalue
         = f.text_field :medical_insurance_num, :class => 'input-large'
-    
-    
-    
+
     .fieldrow#pestimateage
       .fieldlabel
         %div.tooltip
@@ -81,7 +79,6 @@
             = I18n.t('patients.form.external_id_tooltip')
       .fieldvalue
         = f.text_field :external_id, :class => 'input-large'
-    
 
     .fieldrow#pemail
       .fieldlabel
@@ -98,7 +95,7 @@
           %div.tooltiptext_r
             = I18n.t('patients.form.external_patient_system_tooltip')
       .fieldvalue
-        = f.text_field :external_patient_system, :class => 'input-large'
+        = f.collection_select :external_system, ExternalSystem.all, :id, :name, prompt: I18n.t('forms.please_select')
     
 
     .fieldrow#pphone
