--- a/cdx_vietnam/app/views/patients/_form.html.haml
+++ b/cdx_vietnam/app/views/patients/_form.html.haml
@@ -88,14 +88,16 @@
             = I18n.t('patients.form.email_tooltip')
       .fieldvalue
         = f.text_field :email, :class => 'input-large'
-    .fieldrow#pexsys
-      .fieldlabel
-        %div.tooltip
-          = f.label :external_patient_system
-          %div.tooltiptext_r
-            = I18n.t('patients.form.external_patient_system_tooltip')
-      .fieldvalue
-        = f.collection_select :external_system, ExternalSystem.all, :id, :name, prompt: I18n.t('forms.please_select')
+    
+    - if ExternalSystem.any?
+      .fieldrow#pexsys
+        .fieldlabel
+          %div.tooltip
+            = f.label :external_patient_system
+            %div.tooltiptext_r
+              = I18n.t('patients.form.external_patient_system_tooltip')
+        .fieldvalue
+          = f.collection_select :external_system, ExternalSystem.all, :id, :name, prompt: I18n.t('forms.please_select')
     
 
     .fieldrow#pphone
@@ -106,15 +108,17 @@
             = I18n.t('patients.form.phone_tooltip')
       .fieldvalue
         = f.text_field :phone, :class => 'input-large'
-    .fieldrow#p
-      .fieldlabel
-        %div.tooltip
-          = f.label :entity_id
-          %div.tooltiptext_r
-            = I18n.t('patients.form.entity_id_tooltip')
-      .fieldvalue
-        .textblock
-          = @patient.display_patient_id
+    
+    - unless @patient.id.nil?
+      .fieldrow#p
+        .fieldlabel
+          %div.tooltip
+            = f.label :entity_id
+            %div.tooltiptext_r
+              = I18n.t('patients.form.entity_id_tooltip')
+        .fieldvalue
+          .textblock
+            = @patient.display_patient_id
  
     %br{:clear => "both"}/
   
