--- a/cdx_core/app/views/layouts/application.html.haml
+++ b/cdx_core/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
       = I18n.t('layout.header.meta_title')
     = Gon::Base.render_data({})
     = stylesheet_link_tag "application", :media => "all"
-    = stylesheet_link_tag "barcode-print", :media => "print"
+    = stylesheet_link_tag print_theme, :media => "print"
     = javascript_include_tag "es5-shim" if Rails.env.test?
     = javascript_include_tag "application"
     = csrf_meta_tags
