--- a/cdx_core/app/views/xpert_results/show.haml
+++ b/cdx_core/app/views/xpert_results/show.haml
@@ -17,6 +17,13 @@
               = XpertResult.human_attribute_name(:result_status)
           .col-6
             = I18n.t("select.patient_result.status_options.#{@xpert_result.result_status}")
+        - if @xpert_result.any_feedback?
+          .row
+            .col-6
+              %label
+                = XpertResult.human_attribute_name(:feedback_message_id)
+            .col-6
+              = FeedbackMessages::Finder.find_text_from_patient_result(@xpert_result)
         .row
           .col-6
             %label
