--- a/cdx_core/app/views/microscopy_results/show.haml
+++ b/cdx_core/app/views/microscopy_results/show.haml
@@ -43,7 +43,7 @@
                 %label
                   = MicroscopyResult.human_attribute_name(:sample_identifier_id)
               .col-6
-                = @microscopy_result.sample_identifier.lab_sample_id
+                = @microscopy_result.sample_identifier.cpd_id_sample
             .row
               .col-6
                 %label
