--- a/cdx_core/app/views/xpert_results/show.haml
+++ b/cdx_core/app/views/xpert_results/show.haml
@@ -35,7 +35,7 @@
             %label
               = XpertResult.human_attribute_name(:sample_identifier_id)
           .col-6
-            = @xpert_result.sample_identifier.lab_sample_id
+            = @xpert_result.sample_identifier.cpd_id_sample
         .row
           .col-6
             %label
