amends to remove duplication of code/yaml

--- a/cdx_core/app/assets/stylesheets/_newlayout.scss
+++ b/cdx_core/app/assets/stylesheets/_newlayout.scss
@@ -1268,6 +1268,7 @@ form#filters-form.filteroptions #clear_button:hover{
     transition: all 0.4s ease 0s;
     width: 18px;
     display:block !important;
+}
 
 .testflow .panel.patient-summary {
     height: 186px;
