[FIX] translation missing

--- a/cdx_vietnam/app/views/patients/_form.html.haml
+++ b/cdx_vietnam/app/views/patients/_form.html.haml
@@ -124,7 +124,8 @@
   
   .whitebox
     .purpleheader
-      %h3 ADDRESS DETAILS
+      %h3 
+        = I18n.t('patients.form.address_details')
     
 
     .row.hideme
