--- a/cdx_core/app/views/patients/_patient_summary.haml
+++ b/cdx_core/app/views/patients/_patient_summary.haml
@@ -15,7 +15,7 @@
         %li
           %label
             = Patient.human_attribute_name(:gender)
-          = patient.gender
+          = I18n.t("patients.show.#{patient.gender}")
         %li
           %label
             = Patient.human_attribute_name(:birth_date_on)
