--- a/cdx_vietnam/app/views/patients/_form.html.haml
+++ b/cdx_vietnam/app/views/patients/_form.html.haml
@@ -133,7 +133,8 @@
 
   .whitebox
     .purpleheader
-      %h3 ADDRESS DETAILS
+      %h3 
+        = I18n.t('patients.form.address_details')
 
     .row.hideme
       .col.pe-2
