2473 add vitimes_id

--- a/cdx_vietnam/app/views/patients/_form.html.haml
+++ b/cdx_vietnam/app/views/patients/_form.html.haml
@@ -14,9 +14,9 @@
   = validation_errors @patient
 
   .whitebox
-  
     .fieldrow#pname
       = react_component 'PatientInputName', fieldValue: @patient.name, patientsSearchUrl: patient_search_index_path
+
     .fieldrow#pnickname
       .fieldlabel
         %div.tooltip
@@ -25,8 +25,7 @@
             = I18n.t('patients.form.nickname_tooltip')
       .fieldvalue
         = f.text_field :nickname, :class => 'input-large'
-        
-    
+
     .fieldrow#pgender
       .fieldlabel
         %div.tooltip
@@ -35,11 +34,10 @@
             = I18n.t('patients.form.gender_tooltip')
       .fieldvalue
         = f.collection_select :gender, Patient.gender_options, :first, :last
+
     .fieldrow#pcmdn
       = react_component 'SocialSecurityCode', fieldValue: @patient.social_security_code
-    
-        
-    
+
     .fieldrow#pdob
       .fieldlabel
         %div.tooltip
@@ -48,6 +46,7 @@
             = I18n.t('patients.form.birthdate_tooltip')
       .fieldvalue
         = f.date_select :birth_date_on, order: [:day, :month, :year], prompt: { day: I18n.t('patients.form.select_day'), month: I18n.t('patients.form.select_month'), year: I18n.t('patients.form.select_year') }, start_year: Date.today.year, end_year: Date.today.year - 100
+
     .fieldrow#pmis
       .fieldlabel
         %div.tooltip
@@ -71,6 +70,7 @@
           var estimatedyear = currentyear - $(this).val();
           $('#patient_birth_date_on_1i').val(estimatedyear);
           });
+
     .fieldrow#pextid
       .fieldlabel
         %div.tooltip
@@ -88,7 +88,7 @@
             = I18n.t('patients.form.email_tooltip')
       .fieldvalue
         = f.text_field :email, :class => 'input-large'
-    
+
     - if ExternalSystem.any?
       .fieldrow#pexsys
         .fieldlabel
@@ -98,7 +98,7 @@
               = I18n.t('patients.form.external_patient_system_tooltip')
         .fieldvalue
           = f.collection_select :external_system, ExternalSystem.all, :id, :name, prompt: I18n.t('forms.please_select')
-    
+
 
     .fieldrow#pphone
       .fieldlabel
@@ -108,7 +108,16 @@
             = I18n.t('patients.form.phone_tooltip')
       .fieldvalue
         = f.text_field :phone, :class => 'input-large'
-    
+
+    .fieldrow#pvitimes_id
+      .fieldlabel
+        %div.tooltip
+          = f.label :vitimes_id
+          %div.tooltiptext_r
+            = I18n.t('patients.form.vitimes_id_tooltip')
+      .fieldvalue
+        = f.text_field :vitimes_id, :class => 'input-large'
+
     - unless @patient.id.nil?
       .fieldrow#p
         .fieldlabel
@@ -119,13 +128,12 @@
         .fieldvalue
           .textblock
             = @patient.display_patient_id
- 
+
     %br{:clear => "both"}/
-  
+
   .whitebox
     .purpleheader
       %h3 ADDRESS DETAILS
-    
 
     .row.hideme
       .col.pe-2
@@ -136,8 +144,6 @@
       .col
         = f.text_field :entity_id, :class => 'input-large', readonly: !@patient.new_record?
 
-
-        
     - count = 0
     = f.fields_for :addresses do |addresses_form|
       - count = count + 1
@@ -160,12 +166,10 @@
 
       %br{:clear => "both"}/
       .row.button
-        %button.input-large#copy_addr 
+        %button.input-large#copy_addr
           = I18n.t('patients.form.copy_addr_button')
 
-            
     %br{:clear => "both"}/
-
 
     .row.button-actions
       .col
