--- a/cdx_core/app/views/culture_results/_form.haml
+++ b/cdx_core/app/views/culture_results/_form.haml
@@ -2,9 +2,9 @@
   = validation_errors @culture_result
   .row
     .col.pe-2
-      = f.label :sample_collected_on, I18n.t('culture_results.form.sample_collected_on')
+      = f.label :sample_collected_at, I18n.t('culture_results.form.sample_collected_at')
     .col
-      = f.date_field :sample_collected_on
+      = f.date_field :sample_collected_at
   .row
     .col.pe-2
       = f.label :media_used, I18n.t('culture_results.form.media_used')
@@ -47,9 +47,9 @@
       = f.text_field :examined_by
   .row
     .col.pe-2
-      = f.label :result_on, I18n.t('culture_results.form.result_on')
+      = f.label :result_at, I18n.t('culture_results.form.result_at')
     .col
-      = f.date_field :result_on
+      = f.date_field :result_at
   .row
     .col.pe-2
       = f.label :comment
