--- a/cdx_core/app/views/culture_results/show.haml
+++ b/cdx_core/app/views/culture_results/show.haml
@@ -29,9 +29,9 @@
             .row
               .col-6
                 %label
-                  = CultureResult.human_attribute_name(:sample_collected_on)
+                  = CultureResult.human_attribute_name(:sample_collected_at)
               .col-6
-                = I18n.l(@culture_result.sample_collected_on, format: :full_date)
+                = I18n.l(@culture_result.sample_collected_at, format: :full_date)
             .row
               .col-6
                 %label
@@ -59,9 +59,9 @@
             .row
               .col-6
                 %label
-                  = CultureResult.human_attribute_name(:result_on)
+                  = CultureResult.human_attribute_name(:result_at)
               .col-6
-                = I18n.l(@culture_result.result_on, format: :full_date)
+                = I18n.l(@culture_result.result_at, format: :full_date)
             .row
               .col-6
                 %label
