--- a/cdx_core/app/views/dst_lpa_results/_form.haml
+++ b/cdx_core/app/views/dst_lpa_results/_form.haml
@@ -2,9 +2,9 @@
   = validation_errors @dst_lpa_result
   .row
     .col.pe-2
-      = f.label :sample_collected_on
+      = f.label :sample_collected_at
     .col
-      = f.date_field :sample_collected_on
+      = f.date_field :sample_collected_at
   .row
     .col.pe-2
       = f.label :media_used
@@ -88,9 +88,9 @@
 
   .row
     .col.pe-2
-      = f.label :result_on
+      = f.label :result_at
     .col
-      = f.date_field :result_on
+      = f.date_field :result_at
   .row
     .col.pe-2
       = f.label :comment
