--- a/cdx_core/app/views/microscopy_results/_form.haml
+++ b/cdx_core/app/views/microscopy_results/_form.haml
@@ -3,9 +3,9 @@
   .box-content
     .row
       .col.pe-2
-        = f.label :sample_collected_on
+        = f.label :sample_collected_at
       .col
-        = f.date_field :sample_collected_on
+        = f.date_field :sample_collected_at
     .row
       .col.pe-2
         = f.label :specimen_type
@@ -47,9 +47,9 @@
         = f.text_field :examined_by
     .row
       .col.pe-2
-        = f.label :result_on
+        = f.label :result_at
       .col
-        = f.date_field :result_on
+        = f.date_field :result_at
     .row
       .col.pe-2
         = f.label :comment
