--- a/cdx_core/app/views/xpert_results/show.haml
+++ b/cdx_core/app/views/xpert_results/show.haml
@@ -27,9 +27,9 @@
         .row
           .col-6
             %label
-              = XpertResult.human_attribute_name(:sample_collected_on)
+              = XpertResult.human_attribute_name(:sample_collected_at)
           .col-6
-            = I18n.l(@xpert_result.sample_collected_on, format: :full_date)
+            = I18n.l(@xpert_result.sample_collected_at, format: :full_date)
         .row
           .col-6
             %label
@@ -64,9 +64,9 @@
         .row
           .col-6
             %label
-              = XpertResult.human_attribute_name(:result_on)
+              = XpertResult.human_attribute_name(:result_at)
           .col-6
-            = I18n.l(@xpert_result.result_on, format: :full_date)
+            = I18n.l(@xpert_result.result_at, format: :full_date)
         .row
           .col-6
             %label
