--- a/cdx_core/app/views/dst_lpa_results/show.haml
+++ b/cdx_core/app/views/dst_lpa_results/show.haml
@@ -29,7 +29,12 @@
               .col-12
                 %label
                   = DstLpaResult.human_attribute_name(:sample_collected_at)
-                = I18n.l(@dst_lpa_result.sample_collected_at, format: :full_date)
+                = Extras::Dates::Format.datetime_with_time_zone(@dst_lpa_result.sample_collected_at, :full_time)
+            .row
+              .col-12
+                %label
+                  = DstLpaResult.human_attribute_name(:result_at)
+                = Extras::Dates::Format.datetime_with_time_zone(@dst_lpa_result.result_at, :full_time)
             .row
               .col-12
                 %label
@@ -50,12 +55,6 @@
                 %label
                   = DstLpaResult.human_attribute_name(:examined_by)
                 = @dst_lpa_result.examined_by
-            .row
-              .col-12
-                %label
-                  = DstLpaResult.human_attribute_name(:result_at)
-                = I18n.l(@dst_lpa_result.result_at, format: :full_date)
-
           .col-4
             .row
               .col-12
