--- a/cdx_vietnam/app/views/patients/_patient_summary.html.haml
+++ b/cdx_vietnam/app/views/patients/_patient_summary.html.haml
@@ -72,7 +72,7 @@
         %li
           %label
             = Patient.human_attribute_name(:created_at)
-          = I18n.l(patient.created_at, format: :long)
+          = Extras::Dates::Format.datetime_with_time_zone(patient.created_at, :full_time)
 
         - if has_access?(@patient, Policy::Actions::UPDATE_PATIENT)
           %ul.button-container
