addition of approvals header - change of styling in some areas - additiion of labels fot VN episodes

--- a/cdx_core/app/views/patient_logs/show.haml
+++ b/cdx_core/app/views/patient_logs/show.haml
@@ -41,7 +41,7 @@
                   = @patient_log.comment
 
           .col-6
-            .panel.patient-details
+            .panel.patient-details.historylogs
               .row
                 .col-12
                   %ul
