--- a/cdx_core/app/assets/stylesheets/_newlayout.scss
+++ b/cdx_core/app/assets/stylesheets/_newlayout.scss
@@ -1278,3 +1278,20 @@ form#filters-form.filteroptions #clear_button:hover{
 .testflow .panel.patient-details label, .testflow .panel.patient-details .custom-fields-title > .col {
   min-width: 202px;
 }
+
+
+.historylogs{
+min-width:550px !important;
+float:right;
+}
+
+.historylogs label{
+min-width:135px !important;
+}
+
+.historylogs li{
+wodth:50%;
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+}
