change spelling of width

--- a/cdx_core/app/assets/stylesheets/_newlayout.scss
+++ b/cdx_core/app/assets/stylesheets/_newlayout.scss
@@ -1290,7 +1290,7 @@ min-width:135px !important;
 }
 
 .historylogs li{
-wodth:50%;
+width:50%;
 white-space: nowrap;
 overflow: hidden;
 text-overflow: ellipsis;
